@@ -1,4 +1,4 @@
-/* $OpenBSD: clientloop.h,v 1.21 2008/06/12 04:06:00 djm Exp $ */
+/* $OpenBSD: clientloop.h,v 1.22 2008/06/12 15:19:17 djm Exp $ */
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -48,6 +48,7 @@ int	 client_request_tun_fwd(int, int, int);
 
 /* Escape filter for protocol 2 sessions */
 void	*client_new_escape_filter_ctx(int);
+void	 client_filter_cleanup(int, void *);
 int	 client_simple_escape_filter(Channel *, char *, int);
 
 /* Global request confirmation callbacks */
